# responsive-ai

./: .env.example  .gitignore  Pipfile  README.md  config.py  next.config.js  package-lock.json  package.json  prompter.py  pyproject.toml  speech-to-text.py  transcriber.py  tsconfig.json
client/: README.md  next.config.js  package-lock.json  package.json
client/pages/: index.tsx
client/pages/api/: gpt-ai.ts
client/styles/: custom.css  globals.css
client/utils/: gpt-script.ts
pages/: _app.tsx  index.tsx
pages/api/: gpt-ai.ts
server/: package-lock.json  package.json  server.ts
styles/: custom.css  globals.css
utils/: audio.py  gpt-script.ts  logger.py
