[project]
name = "open-query-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "keyboard>=0.13.5",
    "numpy>=2.3.2",
    "sounddevice>=0.5.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]
